--- a/hello.html
+++ b/hello.html
@@ -62,8 +62,8 @@
             Le tag créé reste attaché au commit sur lequel on l'a créé.
             Le tag permet de naviguer plus facilement et d'identifier une version. Par exemple, le tag mon_site_web_V1.</p>
                 <ol>
-                    <li>1/ Se placer sur le commit : git check out [numéro du commit ou tag] <i> : Déplace le tag HEAD (commit acctuel) sur le commit visé</i></li>
-                    <li>2/ Utiliser les commandes :</li>
+                    <li>Se placer sur le commit : git check out [numéro du commit ou tag] <i> : Déplace le tag HEAD (commit acctuel) sur le commit visé</i></li>
+                    <li>Utiliser les commandes :</li>
                         <ul>
                             <li>git tag [nom du tag] <i>: Nomme un tag</i></li>
                             <li>git tag --delete [nom du tag] <i>: Supprime un tag</i></li>
@@ -71,19 +71,27 @@
                         </ul>
                 </ol>
 
-			<h3>Cloner un dépôt git</h3>
-				<ul>
-					<li>git clone [adresse du dossier récupéré sur GitHub] [nom du dossier]</li>
-					<li>cd [nom du dossier]</li>
-					<li>git config user.name <i>: Modifier le nom pour ce dépôt</i></li>
-				</ul>
+		<h2>Cloner un dépôt git</h2>
+			<ol>
+				<li>git clone [adresse du dossier récupéré sur GitHub] [nom du dossier]</li>
+				<li>cd [nom du dossier]</li>
+				<li>git config user.name <i>: Modifier le nom pour ce dépôt</i></li>
+			</ol>
 
-			<h3>Gérer les remote</h3>
-				<ul>
-					<li>git remote add [url de GitHub] <i>: Initialise le remote distant</i></li>
-					<li>git remote -v <i>: Affiche la liste des remote</i></li>
-					<li>git remote show [nom du remote]</li>
-				</ul>
+		<h2>Gérer les remote</h2>
+			<ul>
+				<li>git remote add [url de GitHub] <i>: Initialise le remote distant</i></li>
+				<li>git remote -v <i>: Affiche la liste des remote</i></li>
+				<li>git remote show [nom du remote]</li>
+			</ul>
+
+		<h2>Pousser ses commits sur le dépôt distant</h2>
+		<ul>
+			<li>git push -u [nom du remote] [nom de la branche] <i>: Initialise le remote distant</i></li>
+			<li>git remote -v <i>: Affiche la liste des remote</i></li>
+			<li>git remote show [nom du remote]</li>
+		</ul>
+
         <div id="top-banner">
             Bienvenue dans cette formation GIT !
         </div>
