--- a/hello.html
+++ b/hello.html
@@ -60,7 +60,7 @@
             <h3>Créer des tags pour se déplacer plus vite dans l'historique</h3>
             <p style="margin-left: 26px;">Le tag MASTER se positionne toujours sur le dernier commit.
             Le tag créé reste attaché au commit sur lequel on l'a créé.
-            Le tag permet de naviguer plus facilement et d'identifier une version. Par exemple, le tag mon_site_web_V1.</p>
+            Le tag permet de naviguer plus facilement et d'identifier une version. Par exemple, le tag MON_SITE_V1.</p>
                 <ol>
                     <li>Se placer sur le commit : git check out [numéro du commit ou tag] <i> : Déplace le tag HEAD (commit acctuel) sur le commit visé</i></li>
                     <li>Utiliser les commandes :</li>
@@ -90,6 +90,7 @@
 			<li>git push -u [nom du remote] [nom de la branche] <i>: Initialise le remote distant</i></li>
 			<li>git remote -v <i>: Affiche la liste des remote</i></li>
 			<li>git remote show [nom du remote]</li>
+			<li>git push origin [nom du tag] <i>: Pousse le tag sur le dépôt distant</i></li>
 		</ul>
 
         <div id="top-banner">
