--- a/hello.html
+++ b/hello.html
@@ -101,7 +101,13 @@
 				<li>git pull : <i>Appliquer les modifications au dépôt local : déplace le tag master (On peut faire uniquement git pull au lieu de fetch)</i></li>
                 <li><b>toujours un git pull / jamais de git fetch seul</b></li>
 			</ul>
-
+        
+        <h2>Ajouter un fichier readme</h2>
+            <ul>
+                <li>echo "écrire un truc" >> README.md : <i>Créer un fichier dans dépôt local</i></li>
+                <li>cat README.md : <i>Affiche le fichier</i></li>
+                <li>git add ., git commit -m"", git push</li>
+            </ul>
 
         <div id="top-banner">
             Bienvenue dans cette formation GIT !
