delete un truc à effacer

--- a/hello.html
+++ b/hello.html
@@ -49,6 +49,7 @@
                     <li>git log <i>: Affiche la liste des commits</i></li>
                     <li>git log -n <i>: Affiche les n derniers commits</i></li>
                     <li>git show [numéro SHA1 (= du commit) ou tag] <i>se mettre sur le numéro double cliquer puis clic de mollette : montre le contenu du commit</i></li>
+                    <li>pour sortir de logs trop longs : appuyer sur Q</li>
                 </ul>
 
             <h3>Se déplacer dans les commits</h3>
@@ -108,15 +109,6 @@
                 <li>cat README.md : <i>Affiche le fichier</i></li>
                 <li>git add ., git commit -m"", git push</li>
             </ul>
-
-        <div id="top-banner">
-            Bienvenue dans cette formation GIT !
-        </div>
-
-        <div>
-            <p>Une brève description de qui je suis.</p>
-        </div>
-        <b>Un truc à effacer</b>
 
 </body>
 </html>
