--- a/hello.html
+++ b/hello.html
@@ -13,6 +13,8 @@
             <h1>Udemy - Formation Git et GitHub : de Débutant à Confirmé </h1>
         </div>
 
+        <p><b>Chaque ligne correspond à une commande. L'explication de la commande figure après ":"</b></p>
+        <br>
         <h2>Pour configurer git</h2>
             <ul>
                 <li>git config --global user.name "Nicolas GAUTIER"</li>
@@ -120,7 +122,13 @@
                     <li>git blame -L [indiquer les lignes voulues] [nom du fichier] : <i>Avoir les informations sur les lignes</i></li>
                     <li>git blame -L [indiquer les lignes voulues][,+4] [nom du fichier] : <i>Avoir les informations sur les lignes et les 4 qui suivent</i></li>
                 </ul>
-            
+            <h3>Filtrer les modifications</h3>
+                <ul>
+                    <li>touch .gitignore : <i>Créer un fichier gitignore / Mettre un point permet de cacher le fichier</i></li>
+                    <li>mkdir tmp : <i>Créer un dossier tmp</i></li>
+                    <li>echo "écrire un message" > todo.tx : <i>Créer le fichier todo.txt et inclut le texte du message</i></li>
+                    <li></li>
+                </ul>
         
 </body>
 </html>
