add recuperer une branche

--- a/hello.html
+++ b/hello.html
@@ -165,7 +165,12 @@
                 <ul>
                     <li>git branch [nom de la branche] : <i>Créer la branche</i></li>
                     <li>git branch : <i>Lister les branches</i></li>
-                    <li>...</li>
+                </ul>
+            <h3>Récupérer une branche</h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
                 </ul>
 </body>
 </html>
