add Faire un rebase entre deux branches

--- a/hello.html
+++ b/hello.html
@@ -185,5 +185,18 @@
                 </ul>
 
             <h3>Faire un rebase entre deux branches</h3>
+                <ol>
+                    <li>git rebase [commit cible du rebase] : <i>Repositionne les commits sur une branche, par exemple, master</i></li>
+                    <li>si conflit, éditer, résoudre les conflits, git add [fichier], git rebase --continue</li>
+                    <li>le master n'a pas bouger, git checkout [nom de la branche absorbante]</li>
+                    <li>git merge [nom de la branche à rebase]</li>
+                </ol>
+            
+            <h3>Supprimer une branche</h3>
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
 </body>
 </html>
