add supprimer une branche

--- a/hello.html
+++ b/hello.html
@@ -178,11 +178,11 @@
                 </ul>
             
             <h3>Faire un merge entre deux branches</h3>
-                <ul>
+                <ol>
                     <li>On se positionne sur la branche absorbante git checkout</li>
                     <li>git merge [branche à merger] : <i>Merger les branches</i></li>
                     <li>si conflit, éditer le fichier, le régler et push</li>
-                </ul>
+                </ol>
 
             <h3>Faire un rebase entre deux branches</h3>
                 <ol>
@@ -194,9 +194,9 @@
             
             <h3>Supprimer une branche</h3>
                 <ul>
-                    <li></li>
-                    <li></li>
-                    <li></li>
+                    <li>ne pas se positionner sur la branche que l'on veut supprimer</li>
+                    <li>git branch -d [nom de la branche] : <i>Supprimer la branche en local</i></li>
+                    <li>git push [nom du remote] --delete [nom de la branche à supprimer] : <i>Supprimer la branche sur le serveur distant</i></li>
                 </ul>
 </body>
 </html>
